--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "multer": "^2.0.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.3",
     "socket.io": "^4.8.1",
     "stripe": "^18.5.0",
