--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "multer": "^2.0.1",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.3",
+    "redis": "^5.10.0",
     "socket.io": "^4.8.1",
     "stripe": "^18.5.0",
     "ts-node-dev": "^2.0.0",
