--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@aws-sdk/lib-storage": "^3.835.0",
     "@prisma/client": "^6.10.1",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
